Cleanup KLed

Code improvements:
* massive code reduction by using Qt gradients
* simplify cachedPixmap handling
* remove "builtin" benchmark

Bug fixes:
* fix background, now uses transparency
* fix cache not updated on look changes
* fix cache not updated on resize
* fix cropped appearance
* fix alignment inside margins

Visual improvements:
* use consistent bevelled borders
* use SmallIconSize as sizeHint
* use 0° degree light angle (same as Oxygen and many other styles)
* make border width relative to size

BUG: 98719
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdelibs/; revision=1178386